<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/about_you"
            android:textColor="#323232"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/profile_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_2_2"
            android:textColor="#323232"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn" />

        <TextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:text="@string/height"
            android:textColor="#323232"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_page" />

        <SeekBar
            android:id="@+id/height_seek_bar"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:max="250"
            android:padding="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_title"
            tools:progress="20" />

        <TextView
            android:id="@+id/height_tv"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/outlined_background"
            android:gravity="center"
            android:text="0"
            android:textColor="#323232"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/text1"
            app:layout_constraintEnd_toStartOf="@+id/text1"
            app:layout_constraintTop_toTopOf="@+id/text1" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp"
            android:padding="0dp"
            android:text="@string/sm"
            android:textColor="#323232"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_page" />

        <TextView
            android:id="@+id/weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:text="@string/weight"
            android:textColor="#323232"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <SeekBar
            android:id="@+id/weight_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:max="250"
            android:padding="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_title"
            tools:progress="20" />

        <TextView
            android:id="@+id/weight_tv"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/outlined_background"
            android:gravity="center"
            android:text="0"
            android:textColor="#323232"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/sm"
            app:layout_constraintEnd_toStartOf="@+id/sm"
            app:layout_constraintTop_toTopOf="@+id/sm" />

        <TextView
            android:id="@+id/sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp"
            android:padding="0dp"
            android:text="@string/kg"
            android:textColor="#323232"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="@string/next"
            android:theme="@style/GradientButtonStyle"
            app:layout_constraintBottom_toTopOf="@+id/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/skip"
            android:textColor="#9DA1A7"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>