<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:background="@color/white"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/about_you"
                    android:textColor="#323232"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/ic_back_arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/profile_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="1/2"
                    android:textColor="#323232"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/back_btn" />

                <ImageView
                    android:id="@+id/user_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="32dp"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_page" />

                <TextView
                    android:id="@+id/choose_photo_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/choose_photo"
                    android:textColor="#FF7B1C"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_icon" />

                <TextView
                    android:id="@+id/sex_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/sex"
                    android:textColor="#323232"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choose_photo_btn" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sex_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sex_button_shape"
                    android:text="@string/men"
                    android:theme="@style/PlainButtonStyle"
                    app:layout_constraintEnd_toStartOf="@id/sex_female"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sex_title" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sex_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sex_button_shape"
                    android:text="@string/female"
                    android:theme="@style/PlainButtonStyle"
                    app:layout_constraintEnd_toStartOf="@id/sex_other"
                    app:layout_constraintStart_toEndOf="@+id/sex_male"
                    app:layout_constraintTop_toBottomOf="@+id/sex_title" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sex_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"

                    android:layout_marginTop="16dp"
                    android:background="@drawable/sex_button_shape"
                    android:text="@string/other"
                    android:theme="@style/PlainButtonStyle"
                    app:layout_constraintEnd_toEndOf="@+id/set_name_ll"
                    app:layout_constraintStart_toEndOf="@+id/sex_female"
                    app:layout_constraintTop_toBottomOf="@+id/sex_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/set_name_ll"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sex_other">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/set_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/set_age_ll"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/set_name_ll">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/set_age_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/set_city_ll"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/set_age_ll">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/set_city_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/next_bnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/button_background"
                    android:text="@string/next"
                    android:theme="@style/GradientButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/set_city_ll" />

                <TextView
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/skip"
                    android:textColor="#9DA1A7"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>