<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.auth.sign_up.SignUpFragment">

                <ImageView
                    android:id="@+id/gradient_background"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_bg_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/ic_back_arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:text="@string/choose_plan"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/hero_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:elevation="1dp"
                    android:src="@drawable/ic_illustration"
                    app:layout_constraintBottom_toBottomOf="@+id/gradient_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/frst_consultation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/violet_gradient"
                    android:text="@string/employ"
                    android:theme="@style/GradientButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gradient_background" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/frst_consultation_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/violet_gradient"
                    android:gravity="start|center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/frst_consultation"
                    android:theme="@style/GradientButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gradient_background" />

                <TextView
                    android:id="@+id/cost_frst_consultaiton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:elevation="2dp"
                    android:text="@string/frst_cost"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/frst_consultation"
                    app:layout_constraintEnd_toEndOf="@+id/frst_consultation"
                    app:layout_constraintTop_toBottomOf="@+id/gradient_background" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/frst_consultaiton_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/blue_gradient"
                    android:gravity="start|center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/frst_consultation"
                    android:theme="@style/GradientButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frst_consultation" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cost_frst_month_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/blue_gradient"
                    android:gravity="start|center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/frst_month"
                    android:theme="@style/GradientButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frst_consultation" />

                <TextView
                    android:id="@+id/cost_frst_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:elevation="2dp"
                    android:text="@string/frst_month_cost"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/cost_frst_month_btn"
                    app:layout_constraintEnd_toEndOf="@+id/frst_consultation"
                    app:layout_constraintTop_toTopOf="@+id/cost_frst_month_btn" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cost_scnd_month_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/yellow_gradient"
                    android:gravity="start|center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/two_month"
                    android:theme="@style/GradientButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cost_frst_month_btn" />

                <TextView
                    android:id="@+id/cost_scnd_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:elevation="2dp"
                    android:text="@string/two_month_cost"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/cost_scnd_month_btn"
                    app:layout_constraintEnd_toEndOf="@+id/frst_consultation"
                    app:layout_constraintTop_toTopOf="@+id/cost_scnd_month_btn" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cost_six_month_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/grey_gradient"
                    android:gravity="start|center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/six_month"
                    android:theme="@style/GradientButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cost_scnd_month_btn" />

                <TextView
                    android:id="@+id/cost_six_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:elevation="2dp"
                    android:text="@string/six_month_cost"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/cost_six_month_btn"
                    app:layout_constraintEnd_toEndOf="@+id/frst_consultation"
                    app:layout_constraintTop_toTopOf="@+id/cost_six_month_btn" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_background"
                    android:text="@string/buy"
                    android:theme="@style/GradientButtonStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cost_six_month_btn" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>